Create UserStore class

--- a/src/pm.dal/pm.dal.vcxproj.filters
+++ b/src/pm.dal/pm.dal.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UsersStore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pm.dal.cpp">
