--- a/src/pm.dal/pm.dal.vcxproj
+++ b/src/pm.dal/pm.dal.vcxproj
@@ -154,6 +154,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="TeamsStore.h" />
     <ClInclude Include="UsersStore.h" />
   </ItemGroup>
   <ItemGroup>
@@ -164,6 +165,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="pm.dal.cpp" />
+    <ClCompile Include="TeamsStore.cpp" />
+    <ClCompile Include="UsersStore.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
