--- a/src/pm.consoleApp/pm.consoleApp.vcxproj
+++ b/src/pm.consoleApp/pm.consoleApp.vcxproj
@@ -151,6 +151,14 @@
   <ItemGroup>
     <ClInclude Include="Database.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\pm.bll\pm.bll.vcxproj">
+      <Project>{79f3d807-2ec7-4691-bf9c-e4259c16e917}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\pm.dal\pm.dal.vcxproj">
+      <Project>{c5545990-aecb-4c54-84f2-d0ff1a7f693a}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
