--- a/src/pm.bll/pm.bll.vcxproj
+++ b/src/pm.bll/pm.bll.vcxproj
@@ -154,6 +154,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="UsersManagement.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -163,6 +164,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="pm.bll.cpp" />
+    <ClCompile Include="UsersManagement.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\pm.dal\pm.dal.vcxproj">
