--- a/src/pm.bll/pm.bll.vcxproj.filters
+++ b/src/pm.bll/pm.bll.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="UsersManagement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TeamsManagement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pm.bll.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UsersManagement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TeamsManagement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
