--- a/src/pm.bll/pm.bll.vcxproj
+++ b/src/pm.bll/pm.bll.vcxproj
@@ -172,6 +172,9 @@
     <ProjectReference Include="..\pm.dal\pm.dal.vcxproj">
       <Project>{c5545990-aecb-4c54-84f2-d0ff1a7f693a}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\pm.tools\pm.tools.vcxproj">
+      <Project>{78d61b59-5ac7-473b-895a-2f7d60f088e0}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
