--- a/src/pm.dal/pm.dal.vcxproj.filters
+++ b/src/pm.dal/pm.dal.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="TeamsStore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProjectsStore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TasksStore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pm.dal.cpp">
@@ -36,6 +42,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TeamsStore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProjectsStore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TasksStore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
